unpackaged/main/default/objects/Recovery__c/Recovery__c.object-meta.xml
<CustomObject>
    <label>Recovery</label>
    <nameField>
        <displayFormat>Rec-{00000}</displayFormat>
        <label>Recovery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recoveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>