unpackaged/main/default/objects/Recovery__c/fields/Last_Payment_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Made_Date__c</fullName>
    <label>Last Payment Made Date</label>
    <summarizedField>Recovery_Payment__c.Date__c</summarizedField>
    <summaryForeignKey>Recovery_Payment__c.Recovery__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>