unpackaged/main/default/objects/Recovery__c/fields/Net_Loss__c.field-meta.xml
<CustomField>
    <fullName>Net_Loss__c</fullName>
    <description>Chargeoff Amount + Total Expenses - Recovery Amount</description>
    <formula>Outstanding_Balance__c +  Matter__r.advpm__Total_Expenses2__c -   ABS(Recovery_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Chargeoff + Expenses - Recovery</inlineHelpText>
    <label>Net Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>