unpackaged/main/default/objects/Recovery__c/fields/Post_Judgment_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Post_Judgment_Expenses__c</fullName>
    <formula>Matter__r.Post_Judgment_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Judgment Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>