unpackaged/main/default/objects/Recovery__c/fields/Recovery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Amount__c</fullName>
    <description>Sum of Recovery Payments</description>
    <inlineHelpText>Sum of Recovery Payments</inlineHelpText>
    <label>Recovery Amount</label>
    <summarizedField>Recovery_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Recovery_Payment__c.Recovery__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>