unpackaged/main/default/objects/Recovery__c/fields/Recovery_Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Amount_Calculated__c</fullName>
    <label>Recovery Amount Calculated</label>
    <summarizedField>Recovery_Payment__c.Calculated_Amount__c</summarizedField>
    <summaryForeignKey>Recovery_Payment__c.Recovery__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>