unpackaged/main/default/objects/Recovery__c/fields/Settlement_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Balance_Remaining__c</fullName>
    <formula>Matter__r.Settlement_Amount__c -   Recovery_Amount_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>